RESOLVED FIXED87472
[WK2] Fix client interface size for WKPageContextMenuClient
https://bugs.webkit.org/show_bug.cgi?id=87472
Summary [WK2] Fix client interface size for WKPageContextMenuClient
Grzegorz Czajkowski
Reported 2012-05-25 01:22:05 PDT
Add correct offset for version 1 and 2 of WKPageContextMenuClient. Revision 109750 introduces a new API and increases size of interfaceSizesByVersion but the table is not properly initialized for newly introduced version 2.
Attachments
proposed patch (1.41 KB, patch)
2012-05-25 01:23 PDT, Grzegorz Czajkowski
no flags
Grzegorz Czajkowski
Comment 1 2012-05-25 01:23:44 PDT
Created attachment 144001 [details] proposed patch
Carlos Garcia Campos
Comment 2 2012-05-25 02:18:20 PDT
Comment on attachment 144001 [details] proposed patch Right, thanks!
WebKit Review Bot
Comment 3 2012-05-25 03:05:30 PDT
Comment on attachment 144001 [details] proposed patch Clearing flags on attachment: 144001 Committed r118506: <http://trac.webkit.org/changeset/118506>
WebKit Review Bot
Comment 4 2012-05-25 03:05:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.