[WK2] Fix client interface size for WKPageContextMenuClient. https://bugs.webkit.org/show_bug.cgi?id=87472

Reviewed by Carlos Garcia Campos.

Add correct offset for version 1 and 2 of WKPageContextMenuClient.
Revision 109750 introduces a new API and increases size of interfaceSizesByVersion
but the table is not properly initialized for newly introduced version 2.

* Shared/APIClientTraits.cpp:
(WebKit):


Canonical link: https://commits.webkit.org/105259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118506 268f45cc-cd09-0410-ab3c-d52691b4dbfc