Source/WebKit2/Shared/APIClientTraits.cpp
@@ -49,6 +49,7 @@ const size_t APIClientTraits<WKBundlePageFullScreenClient>::interfaceSizesByVers
     
 const size_t APIClientTraits<WKPageContextMenuClient>::interfaceSizesByVersion[] = {
     offsetof(WKPageContextMenuClient, contextMenuDismissed),
+    offsetof(WKPageContextMenuClient, getContextMenuFromProposedMenu),
     sizeof(WKPageContextMenuClient)
 };
 
